add gentoo inti

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -81,6 +81,7 @@ $menu = launchscript.py #|| bemenu-run -c -l 10 -W 0.15 -B 4 -i
 #applets 
 exec-once = blueman-applet
 exec-once = nm-applet
+exec-once = ~/.config/gentoo_only/init
 
 
 exec-once = waybar
