--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -438,7 +438,9 @@ windowrulev2 = float, class:(team)$, title:^(?!Steam$).*$
 
 windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
-windowrulev2 = opacity 0.9, class:(firefox), title:(Picture-in-Picture)
+windowrulev2 = opacity 0.6, class:(firefox), title:(Picture-in-Picture)
+windowrulev2 = nofocus off, class:(firefox), title:(Picture-in-Picture)
+windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
 
 windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
 
