add godot window rule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -446,6 +446,8 @@ windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
 
 windowrulev2 = noanim, class:(bemenu)
 
+windowrulev2 = stayfocused, class:^(Godot)$, title:^(Create)
+
 windowrulev2 = renderunfocused, class:(Slay the Spire), title:(Slay the Spire) # fix slay the spire audio stutter while in background
 
 #############################
