add hyprland.conf extras

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -243,6 +243,7 @@ input {
     kb_rules =
 
     follow_mouse = 1
+    mouse_refocus = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -381,6 +382,8 @@ binde = $mainMod, w, exec,dunstify -h string:x-dunst-stack-tag:test "time" "$(da
 # Show title and class of window to make things simple
 bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
 
+bind = $mainMod, v, exec, echo -n "$(wl-paste -n)" | xclip -selection clipboard && notify-send "xclip updated"
+
 # Add hyprfreeze.py bind a bind which freezes the activewindow
 bind = $mainMod&Control, p, exec, notify-send "$(hyprfreeze.py)"
 
@@ -449,6 +452,7 @@ windowrulev2 = noanim, class:(bemenu)
 windowrulev2 = stayfocused, class:^(Godot)$, title:^(Create)
 
 windowrulev2 = renderunfocused, class:(Slay the Spire), title:(Slay the Spire) # fix slay the spire audio stutter while in background
+windowrulev2 = renderunfocused, class:(pokemon tcg live.exe) # fix slay the spire audio stutter while in background
 
 #############################
 ### SCRATCHPAD WORKSPACES ###
