switch to using hyprland_lock script for locking

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -13,5 +13,5 @@ listener {
 listener {
     timeout = 610                            # in seconds.
     #on-timeout = hyprctl dispatch exec hyprlock        # screen off when timeout has passed
-    on-timeout = hyprctl dispatch exec "swaylock -i ~/.config/wallpaper"        # screen off when timeout has passed
+    on-timeout = hyprctl dispatch exec "sh ~/.config/hypr/hyprland_lock.sh"        # screen off when timeout has passed
 }
