add force zero scaling to hyprland config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -37,6 +37,12 @@ monitor=$mainmonitor,2560x1440@164.94Hz,auto,auto
 
 #monitor=$secondmonitor,1920x1080,auto-left,auto
 
+xwayland {
+  force_zero_scaling = true
+
+}
+
+
 ##########################
 ### MONITOR WORKSPACES ###
 ##########################
