switch lockscreen bind to using lock script

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -402,7 +402,7 @@ bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F2, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
 
 # screen lock
-bind = $mainMod, BackSpace, exec, hyprlock
+bind = $mainMod, BackSpace, exec, ~/.config/hypr/hyprland_lock.sh
 
 
 # Laptop multimedia keys for volume and LCD brightness
