switch from blueman-applet to bluetuith scratchpad

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,7 @@
 # wl-clip-persist : clipboard tool to keep clipboard content after app close
 # waybar : bar of choice
 # nm-applet : networking
-# blueman-applet : bluetooth
+# blueman-applet : bluetooth -- disabled
 # hypridle : idle daemon
 # hyprlock : screenlocker
 # wl-gammarelay-rs : bluelight tool of choice
@@ -85,7 +85,7 @@ $menu = launchscript.py #|| bemenu-run -c -l 10 -W 0.15 -B 4 -i
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 #applets 
-exec-once = blueman-applet
+# exec-once = blueman-applet disabled
 exec-once = nm-applet
 exec-once = ~/.config/gentoo_only/init
 
@@ -368,6 +368,7 @@ bind = $mainMod&Alt, 0, movetoworkspacesilent, 10
 
 
 bind = $mainMod, x, togglespecialworkspace, termscratchpad
+bind = $mainMod, b, togglespecialworkspace, termscratchpad_bluetuith
 
 
 # Scroll through existing workspaces with mainMod + scroll
@@ -464,6 +465,7 @@ windowrulev2 = renderunfocused, class:(pokemon tcg live.exe) # fix slay the spir
 ### SCRATCHPAD WORKSPACES ###
 #############################
 workspace = special:termscratchpad, gapsin:0, gapsout:50,on-created-empty:[noblur]kitty -o background_opacity=0.4 # --class hyprScratchpadTerminal
+workspace = special:termscratchpad_bluetuith, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty -o background_opacity=0.4 -e bluetuith # --class hyprScratchpadTerminal
 
 
 debug:disable_logs = false
