--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -19,13 +19,13 @@
        // "mpd",
         "idle_inhibitor",
         "custom/wl-gammarelay-temperature", 
-        "custom/wl-gammarelay-brightness",
-        "custom/wl-gammarelay-gamma",
+        //"custom/wl-gammarelay-brightness",
+        //"custom/wl-gammarelay-gamma",
         "pulseaudio",
      //   "network", //unused can just use network systray applet
         "power-profiles-daemon",
         //"custom/mullvad",
-        "group/mullvad",
+        //"group/mullvad",
         "cpu",
      //   "temperature",
         "memory",
