hyprland: add commented out changes

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,6 +34,7 @@
 $mainmonitor=DP-4
 #$secondmonitor=HDMI-A-1
 monitor=$mainmonitor,2560x1440@164.94Hz,auto,auto
+#monitor=$mainmonitor,2560x1440@164.94Hz,auto,auto, vrr, 1
 
 #monitor=$secondmonitor,1920x1080,auto-left,auto
 
@@ -94,6 +95,7 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
+#exec-once = swaync
 exec-once = wl-clip-persist --clipboard both
 #exec-once = gammastep
 exec-once = wl-gammarelay-rs
@@ -124,6 +126,8 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+#env = __GL_GSYNC_ALLOWED,1
+#env = __GL_VRR_ALLOWED,0
 
 cursor {
     no_hardware_cursors = true
