hyprland: add globbing

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -235,6 +235,9 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
+    enable_swallow = 1
+    swallow_exception_regex = (ncspot)
+    swallow_regex = (foot|kitty|allacritty|Alacritty)
     allow_session_lock_restore = 1
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
