--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -495,7 +495,8 @@ map p`<any> paste dest=%any_path
 map p'<any> paste dest=%any_path
 
 map dD console delete
-map dT console trash
+map DD shell mv %s /home/${USER}/.local/share/Trash/files/
+#map dT console trash
 
 map dd cut
 map ud uncut
