--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -366,8 +366,7 @@ bind = $mainMod&Alt, 8, movetoworkspacesilent, 8
 bind = $mainMod&Alt, 9, movetoworkspacesilent, 9
 bind = $mainMod&Alt, 0, movetoworkspacesilent, 10
 
-
-
+bind = $mainMod&Control, c, centerwindow
 
 
 # Example special workspace (scratchpad)
