fix ueberzugpp being broken from window sollowing

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -462,6 +462,7 @@ windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
 
 windowrulev2 = noanim, class:(bemenu)
+windowrulev2 = noanim, class:(ueberzugpp).*$
 
 windowrulev2 = stayfocused, class:^(Godot)$, title:^(Create)
 
