add other commented out vrr listing hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,7 +33,7 @@
 
 $mainmonitor=DP-4
 #$secondmonitor=HDMI-A-1
-monitor=$mainmonitor,2560x1440@164.94Hz,auto,auto
+monitor=$mainmonitor,2560x1440@165,auto,auto #, vrr, 2
 #monitor=$mainmonitor,2560x1440@164.94Hz,auto,auto, vrr, 1
 
 #monitor=$secondmonitor,1920x1080,auto-left,auto
