add swaync shortcut

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -367,6 +367,8 @@ bind = $mainMod&Alt, 9, movetoworkspacesilent, 9
 bind = $mainMod&Alt, 0, movetoworkspacesilent, 10
 
 bind = $mainMod&Control, c, centerwindow
+# notifcation daemon
+bind = $mainMod&Shift, n, exec, swaync-client -t -sw
 
 
 # Example special workspace (scratchpad)
