hyprland: improve gnome-schema setting/settings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -148,7 +148,14 @@ env = XCURSOR_SIZE,30
 env = HYPRCURSOR_SIZE,30
 
 env = QT_QPA_PLATFORMTHEME,qt5ct:qt6ct
-exec-once=gsettings set org.gnome.desktop.interface gtk-theme 'Arc-Dark'
+
+$gnome-schema = org.gnome.desktop.interface
+exec-once=gsettings set $gnome-schema cursor-theme 'Adwaita'
+exec-once=gsettings set $gnome-schema cursor-size 30
+exec-once=gsettings set $gnome-schema gtk-theme 'Arc-Dark'
+exec-once=gsettings set $gnome-schema icon-theme 'Arc'
+#exec-once=gsettings set $gnome-schema icon-theme 'Adwaita'
+#exec-once=gsettings set $gnome-schema font-name 'Your font name'
 
 #####################
 ### LOOK AND FEEL ###
@@ -426,6 +433,7 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioNext, exec, playerctl next
+
 
 # add keys for bluelight
 bindel = $mainMod&Control, 0, exec, busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 1.0 && busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 6500 
