add fuzzel colours

--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -42,6 +42,15 @@
 
 # render-workers=<number of logical CPUs>
 # match-workers=<number of logical CPUs>
+[colors]
+background=282628aa
+text=ffffffff
+border=742FFCFF
+match=cb4b16ff
+selection=384953FF
+selection-text=000000ff
+selection-match=cb4b16ff
+
 #[colors]
 # background=fdf6e3ff
 # text=657b83ff
