switch to fuzzel

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -73,7 +73,8 @@ $fileManager = dolphin
 $browser = firefox
 #$menu = wofi --show drun
 #$menu = bemenu-run -c -l 10 -W 0.15 -B 4
-$menu = launchscript.py #|| bemenu-run -c -l 10 -W 0.15 -B 4 -i
+#$menu = launchscript.py #|| bemenu-run -c -l 10 -W 0.15 -B 4 -i
+$menu = fuzzel
 
 #################
 ### AUTOSTART ###
