add window rule for hyprland share picker

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -471,6 +471,7 @@ windowrulev2 = nofocus off, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
 
 windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
+windowrulev2 = float, class:(hyprland-share-picker)
 
 windowrulev2 = noanim, class:(bemenu)
 windowrulev2 = noanim, class:(ueberzugpp).*$
