add fix for windowkill game

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -469,6 +469,7 @@ windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = opacity 0.6, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = nofocus off, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
+windowrulev2 = noblur, class:(windowkill) 
 
 windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
 windowrulev2 = float, class:(hyprland-share-picker)
