add playerctl daemon to start up to make media keys work better

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -92,6 +92,7 @@ exec-once = nm-applet
 exec-once = ~/.config/gentoo_only/init
 
 
+exec-once = playerctld daemon # starts playerctl daemon to make playerctl priority actually work.
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = hypridle
