add a keybind for killing waybar incase preformace is really really really needed

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -419,6 +419,7 @@ bind = $mainMod&Alt, c, exec,grim -g "$(slurp)"
 # Gaming script and reset bind
 bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F2, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
+bind = $mainMod, F3, exec, pkill waybar 
 
 # screen lock
 bind = $mainMod, BackSpace, exec, ~/.config/hypr/hyprland_lock.sh
