fuzzel: make background solid

--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -43,7 +43,8 @@
 # render-workers=<number of logical CPUs>
 # match-workers=<number of logical CPUs>
 [colors]
-background=282628aa
+#background=282628aa
+background=282628FF
 text=ffffffff
 border=742FFCFF
 match=cb4b16ff
