--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -250,6 +250,8 @@ misc {
     allow_session_lock_restore = 1
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    key_press_enables_dpms = true
+    mouse_move_enables_dpms = true
 }
 
 
