hyprland: make xdg-desktop portal gtk float

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -476,7 +476,11 @@ windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = noblur, class:(windowkill) 
 
 windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
+
+
+# floating portal windows
 windowrulev2 = float, class:(hyprland-share-picker)
+windowrulev2 = float, class:(xdg-desktop-portal-gtk)
 
 windowrulev2 = noanim, class:(bemenu)
 windowrulev2 = noanim, class:(ueberzugpp).*$
