--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -92,6 +92,7 @@ exec-once = nm-applet
 exec-once = ~/.config/gentoo_only/init
 
 
+exec-once = solaar --window=hide # start solaar to fix mouse to disable Horizontal Scrolling
 exec-once = playerctld daemon # starts playerctl daemon to make playerctl priority actually work.
 exec-once = waybar
 exec-once = hyprpaper
