hyprland: make slurp show cowards

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -417,7 +417,7 @@ bind = $mainMod&Control, p, exec, notify-send "$(hyprfreeze.py)"
 
 # Screenshot binds
 bind = $mainMod, c, exec, grim -g "$(slurp -d)" - | wl-copy
-bind = $mainMod&Alt, c, exec,grim -g "$(slurp)"
+bind = $mainMod&Alt, c, exec,grim -g "$(slurp -d)"
 
 # Gaming script and reset bind
 bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
