update xwayland settings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -39,8 +39,9 @@ monitor=$mainmonitor,2560x1440@165,auto,auto #, vrr, 2
 #monitor=$secondmonitor,1920x1080,auto-left,auto
 
 xwayland {
+  enabled = true
   force_zero_scaling = true
-
+  use_nearest_neighbor = true
 }
 
 
