--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,17 +1,15 @@
 general {
     ignore_dbus_inhibit = false
+    after_sleep_cmd = hyprctl dispatch dpms on
+    before_sleep_cmd = hyprctl dispatch exec "sh ~/.config/hypr/hyprland_lock.sh"
 }
 listener {
     timeout = 330                                 # 5.5min
     on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
+    #on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
-listener {
-    timeout = 600                            # in seconds.
-    on-timeout = notify-send "Hyprlock in 10secs" # command to run when timeout has passed.
-}
-listener {
-    timeout = 610                            # in seconds.
-    #on-timeout = hyprctl dispatch exec hyprlock        # screen off when timeout has passed
-    on-timeout = hyprctl dispatch exec "sh ~/.config/hypr/hyprland_lock.sh"        # screen off when timeout has passed
-}
+#listener {
+#    timeout = 600                            # in seconds.
+#    #on-timeout = hyprctl dispatch exec hyprlock        # screen off when timeout has passed
+#    on-timeout = hyprctl dispatch exec "sh ~/.config/hypr/hyprland_lock.sh"        # screen off when timeout has passed
+#}
