--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -762,4 +762,4 @@ copytmap <ESC> q Q w <C-c>
 
 # extra goofy commands
 map rd shell ripdrag %s
-map du shell sudo rm -i %s
+map ds shell sudo rm -ir %s
