Hyprland: enable hardware cursors since they seem to work now

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -134,7 +134,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 #env = __GL_VRR_ALLOWED,0
 
 cursor {
-    no_hardware_cursors = true
+    no_hardware_cursors = false 
 }
 
 # program config
