hyprland: add overlay tag, and bind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -408,6 +408,8 @@ bindm = $mainMod, mouse:273, resizewindow
 # Show current time bind since I don't use a bar
 binde = $mainMod, w, exec,dunstify -h string:x-dunst-stack-tag:test "time" "$(date)" -t 5000
 
+# tag window as overlay
+bind = $mainMod, o, tagwindow, overlay
 # Show title and class of window to make things simple
 bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
 
@@ -479,6 +481,15 @@ windowrulev2 = noblur, class:(windowkill)
 
 windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
 
+#windowrulev2 = tag overlay, initialTitle:(Discord Popout), class:(vesktop)
+
+#windowrulev2 = float, tag:overlay # doesn't work
+#windowrulev2 = pin, tag:overlay # doesn't work
+windowrulev2 = opacity 0.7, tag:overlay
+windowrulev2 = norounding, tag:overlay
+windowrulev2 = noborder, tag:overlay
+windowrulev2 = noblur, tag:overlay
+windowrulev2 = nofocus on, tag:overlay
 
 # floating portal windows
 windowrulev2 = float, class:(hyprland-share-picker)
