add bind for untagall

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -410,6 +410,8 @@ binde = $mainMod, w, exec,dunstify -h string:x-dunst-stack-tag:test "time" "$(da
 
 # tag window as overlay
 bind = $mainMod, o, tagwindow, overlay
+bind = $mainMod&Shift, o, exec, untagall.py overlay 
+
 # Show title and class of window to make things simple
 bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
 
