change keyboard layout from uk to us

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -122,7 +122,7 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 # make nested compositors (gamescope) use my keyboard layout
-env = XKB_DEFAULT_LAYOUT=gb
+env = XKB_DEFAULT_LAYOUT=$kbLayout
 
 
 #nvidia moment
@@ -261,9 +261,10 @@ misc {
 ### INPUT ###
 #############
 
+$kbLayout = us
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = gb
+    kb_layout = $kbLayout ,gb
     kb_variant =
     kb_model =
     kb_options =
