hyprland: set a bunch of "kb_options"

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -267,7 +267,17 @@ input {
     kb_layout = $kbLayout ,gb
     kb_variant =
     kb_model =
-    kb_options =
+    # kb_options sets xorg style keymap options 
+    # sources:
+    # https://wiki.archlinux.org/title/Xorg/Keyboard_configuration
+    # https://wiki.hyprland.org/Configuring/Uncommon-tips--tricks/
+    #
+    # Option explations:
+    # grp:rshift_toggle makes pressing right_shift swap keyboard layout
+    # lv3:ralt_switch and eurosign:5 makes pressing right alt + 5 key into a bind for the € sign
+    # ctrl:nocaps makes capslock into a second control key
+    #
+    kb_options = ctrl:nocaps, grp:rshift_toggle, lv3:ralt_switch, eurosign:5 #grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
