hyprland: change F1,F2,F3 binds to mainMod&control,(1,2,3) to fit new keyboard

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -436,9 +436,9 @@ bind = $mainMod, c, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod&Alt, c, exec,grim -g "$(slurp -d)"
 
 # Gaming script and reset bind
-bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
-bind = $mainMod, F2, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
-bind = $mainMod, F3, exec, pkill waybar 
+bind = $mainMod&control,1, exec, ~/.config/hypr/gamemode.sh
+bind = $mainMod&control,2, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
+bind = $mainMod&control,3, exec, pkill waybar 
 
 # screen lock
 bind = $mainMod, BackSpace, exec, ~/.config/hypr/hyprland_lock.sh
