hyprland: remove nofocus firefox picture-in-picture rule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -488,7 +488,7 @@ windowrulev2 = float, class:(team)$, title:^(?!Steam$).*$
 windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = opacity 0.6, class:(firefox), title:(Picture-in-Picture)
-windowrulev2 = nofocus off, class:(firefox), title:(Picture-in-Picture)
+#windowrulev2 = nofocus off, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = noblur, class:(windowkill) 
 
