hyprland: add bind for mainmod + volume nob for new keyboard

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -443,6 +443,8 @@ bind = $mainMod&control,3, exec, pkill waybar
 # screen lock
 bind = $mainMod, BackSpace, exec, ~/.config/hypr/hyprland_lock.sh
 
+bindel = $mainMod,XF86AudioRaiseVolume,workspace, e+1
+bindel = $mainMod,XF86AudioLowerVolume,workspace, e-1 
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
