hyprland: add rules for xdg-desktop-portal-gtk under xwayland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -509,6 +509,8 @@ windowrulev2 = nofocus on, tag:overlay
 # floating portal windows
 windowrulev2 = float, class:(hyprland-share-picker)
 windowrulev2 = float, class:(xdg-desktop-portal-gtk)
+windowrulev2 = noblur, class:(Xdg-desktop-portal-gtk) # xwayland version of the picker's name starts with a capital X?
+windowrulev2 = noborder, class:(Xdg-desktop-portal-gtk) # xwayland version of the picker's name starts with a capital X?
 
 windowrulev2 = noanim, class:(bemenu)
 windowrulev2 = noanim, class:(ueberzugpp).*$
