hypridle: add listener to make dpms activate faster when screen locked

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -8,6 +8,12 @@ listener {
     on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
     #on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
+listener {
+    timeout = 30                                 # 30 secs 
+    on-timeout = sh -c 'pgrep -x "swaylock" && hyprctl dispatch dpms off'        # screen off when timeout has passed and swaylock open
+    #on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
+}
+
 #listener {
 #    timeout = 600                            # in seconds.
 #    #on-timeout = hyprctl dispatch exec hyprlock        # screen off when timeout has passed
