xkb: add custom keyboard layout

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -261,7 +261,7 @@ misc {
 ### INPUT ###
 #############
 
-$kbLayout = us
+$kbLayout = us_zuki
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = $kbLayout ,gb
