hyprland: disable layout switching

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -264,7 +264,7 @@ misc {
 $kbLayout = us_zuki
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = $kbLayout ,gb
+    kb_layout = $kbLayout # ,gb
     kb_variant =
     kb_model =
     # kb_options sets xorg style keymap options 
@@ -277,7 +277,7 @@ input {
     # lv3:ralt_switch and eurosign:5 makes pressing right alt + 5 key into a bind for the € sign
     # ctrl:nocaps makes capslock into a second control key
     #
-    kb_options = ctrl:nocaps, grp:rshift_toggle, lv3:ralt_switch, eurosign:5 #grp:alt_shift_toggle
+    kb_options = ctrl:nocaps, lv3:ralt_switch, eurosign:5 #grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
