hyprland: add nvidia catagory

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -124,8 +124,13 @@ env = XDG_SESSION_DESKTOP,Hyprland
 # make nested compositors (gamescope) use my keyboard layout
 env = XKB_DEFAULT_LAYOUT=$kbLayout
 
+# Atempt to set Grim save dir
+env = GRIM_DEFAULT_DIR=/home/zuki/screenshots
 
-#nvidia moment
+
+####################
+## NVIDIA MOMENT ###
+####################
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
@@ -134,11 +139,9 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 #env = __GL_VRR_ALLOWED,0
 
 cursor {
-    no_hardware_cursors = false 
+    no_hardware_cursors = false # not a hard requarement for nvidia any more but reduces stutters as of version v45.
 }
 
-# program config
-env = GRIM_DEFAULT_DIR=~/screenshots/
 
 
 
