--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -75,7 +75,8 @@ $browser = firefox
 #$menu = wofi --show drun
 #$menu = bemenu-run -c -l 10 -W 0.15 -B 4
 #$menu = launchscript.py #|| bemenu-run -c -l 10 -W 0.15 -B 4 -i
-$menu = fuzzel
+$menu = fuzzel --icon-theme=$iconTheme
+
 
 #################
 ### AUTOSTART ###
@@ -112,10 +113,6 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-
-
-
 env = MOZ_ENABLE_WAYLAND,1 
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
@@ -145,22 +142,27 @@ cursor {
 
 
 
-##############################
-## Theming vars and extras ###
-##############################
+##############
+## THEMING ###
+##############
 
-exec-once=hyprctl setcursor Adwaita 30
-env = XCURSOR_THEME="Adwaita"
-env = XCURSOR_SIZE,30
-env = HYPRCURSOR_SIZE,30
+$cursorSize = 30
+$gtkTheme = 'Arc-Dark'
+$iconTheme = 'Arc'
+$cursorTheme = 'Adwaita'
+
+exec-once=hyprctl setcursor Adwaita $cursorSize
+env = XCURSOR_THEME=$cursorTheme
+env = XCURSOR_SIZE,$cursorSize
+env = HYPRCURSOR_SIZE,$cursorSize
 
 env = QT_QPA_PLATFORMTHEME,qt5ct:qt6ct
 
 $gnome-schema = org.gnome.desktop.interface
-exec-once=gsettings set $gnome-schema cursor-theme 'Adwaita'
-exec-once=gsettings set $gnome-schema cursor-size 30
-exec-once=gsettings set $gnome-schema gtk-theme 'Arc-Dark'
-exec-once=gsettings set $gnome-schema icon-theme 'Arc'
+exec-once=gsettings set $gnome-schema cursor-theme $cursorTheme
+exec-once=gsettings set $gnome-schema cursor-size $cursorSize
+exec-once=gsettings set $gnome-schema gtk-theme $gtkTheme
+exec-once=gsettings set $gnome-schema icon-theme $iconTheme
 #exec-once=gsettings set $gnome-schema icon-theme 'Adwaita'
 #exec-once=gsettings set $gnome-schema font-name 'Your font name'
 
