hyprland: just learnt that env setting DOESN'T WORK with = seperator, only with ',' seperator

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -119,10 +119,10 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 # make nested compositors (gamescope) use my keyboard layout
-env = XKB_DEFAULT_LAYOUT=$kbLayout
+env = XKB_DEFAULT_LAYOUT,$kbLayout
 
 # Atempt to set Grim save dir
-env = GRIM_DEFAULT_DIR=/home/zuki/screenshots
+env = GRIM_DEFAULT_DIR,~/screenshots
 
 
 ####################
@@ -152,7 +152,7 @@ $iconTheme = 'Arc'
 $cursorTheme = 'Adwaita'
 
 exec-once=hyprctl setcursor Adwaita $cursorSize
-env = XCURSOR_THEME=$cursorTheme
+env = XCURSOR_THEME,$cursorTheme
 env = XCURSOR_SIZE,$cursorSize
 env = HYPRCURSOR_SIZE,$cursorSize
 
