hyprland: XKB_DEFUALT_LAYOUT with custom kb layout crashes kitty? disabled for time being

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -119,7 +119,10 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 # make nested compositors (gamescope) use my keyboard layout
-env = XKB_DEFAULT_LAYOUT,$kbLayout
+#env = XKB_DEFAULT_LAYOUT,$kbLayout
+# crashes kitty
+# might be due to custom keyboard layout? unsure
+# for the mean time only set explitly for gamescope
 
 # Atempt to set Grim save dir
 env = GRIM_DEFAULT_DIR,~/screenshots
