hyprland: FUCKING FINALLY GET GRIM TO USE MY SCREENSHOT DIR

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -125,7 +125,7 @@ env = XDG_SESSION_DESKTOP,Hyprland
 # for the mean time only set explitly for gamescope
 
 # Atempt to set Grim save dir
-env = GRIM_DEFAULT_DIR,~/screenshots
+env = GRIM_DEFAULT_DIR,$HOME/screenshots
 
 
 ####################
