hyprland: change grim binds around

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -440,7 +440,8 @@ bind = $mainMod, v, exec, echo -n "$(wl-paste -n)" | xclip -selection clipboard 
 bind = $mainMod&Control, p, exec, notify-send "$(hyprfreeze.py)"
 
 # Screenshot binds
-bind = $mainMod, c, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = $mainMod, c, exec, grim
+bind = $mainMod&Control, c, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod&Alt, c, exec,grim -g "$(slurp -d)"
 
 # Gaming script and reset bind
