--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -150,6 +150,8 @@ cursor {
 ##############
 
 $cursorSize = 30
+# note https://wiki.hyprland.org/Configuring/Environment-variables/ advises NOT to set a var with quotes!
+# It seems to work fine so I've opted not to change it but if problems arise with theming this might be a good place to look.
 $gtkTheme = 'Arc-Dark'
 $iconTheme = 'Arc'
 $cursorTheme = 'Adwaita'
