--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -168,7 +168,7 @@ exec-once=gsettings set $gnome-schema cursor-theme $cursorTheme
 exec-once=gsettings set $gnome-schema cursor-size $cursorSize
 exec-once=gsettings set $gnome-schema gtk-theme $gtkTheme
 exec-once=gsettings set $gnome-schema icon-theme $iconTheme
-#exec-once=gsettings set $gnome-schema icon-theme 'Adwaita'
+exec-once=gsettings set $gnome-schema color-scheme 'prefer-dark'
 #exec-once=gsettings set $gnome-schema font-name 'Your font name'
 
 #####################
