hyprland: add bluelight keyboard knob binds, and move all konb based binds into one spot

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -454,8 +454,6 @@ bind = $mainMod&control,3, exec, pkill waybar
 # screen lock
 bind = $mainMod, BackSpace, exec, ~/.config/hypr/hyprland_lock.sh
 
-bindel = $mainMod,XF86AudioRaiseVolume,workspace, e+1
-bindel = $mainMod,XF86AudioLowerVolume,workspace, e-1 
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -469,7 +467,6 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioNext, exec, playerctl next
 
-
 # add keys for bluelight
 bindel = $mainMod&Control, 0, exec, busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 1.0 && busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 6500 
 bindel = $mainMod&Control, minus, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n -100 
@@ -477,6 +474,15 @@ bindel = $mainMod&Control, equal, exec, busctl --user -- call rs.wl-gammarelay /
 bindel = $mainMod&Control, bracketleft, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateBrightness d -0.02 
 bindel = $mainMod&Control, bracketright, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateBrightness d +0.02 
 
+
+# extra binds for keyboard knob
+bindel = $mainMod,XF86AudioMute, exec, busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 1.0 && busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 6500 
+bindel = $mainMod,XF86AudioLowerVolume, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n -100 
+bindel = $mainMod,XF86AudioRaiseVolume, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n +100 
+
+
+bindel = Alt,XF86AudioRaiseVolume,workspace, e+1
+bindel = Alt,XF86AudioLowerVolume,workspace, e-1 
 
 ###############
 ### SUBMAPS ### 
