--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -389,16 +389,16 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Move active window to a workspace without switching workspaces with mainMod + ALT + [0-9]
-bind = $mainMod&Alt, 1, movetoworkspacesilent, 1
-bind = $mainMod&Alt, 2, movetoworkspacesilent, 2
-bind = $mainMod&Alt, 3, movetoworkspacesilent, 3
-bind = $mainMod&Alt, 4, movetoworkspacesilent, 4
-bind = $mainMod&Alt, 5, movetoworkspacesilent, 5
-bind = $mainMod&Alt, 6, movetoworkspacesilent, 6
-bind = $mainMod&Alt, 7, movetoworkspacesilent, 7
-bind = $mainMod&Alt, 8, movetoworkspacesilent, 8
-bind = $mainMod&Alt, 9, movetoworkspacesilent, 9
-bind = $mainMod&Alt, 0, movetoworkspacesilent, 10
+bind = $mainMod Control&Shift, 1, movetoworkspacesilent, 1
+bind = $mainMod Control&Shift, 2, movetoworkspacesilent, 2
+bind = $mainMod Control&Shift, 3, movetoworkspacesilent, 3
+bind = $mainMod Control&Shift, 4, movetoworkspacesilent, 4
+bind = $mainMod Control&Shift, 5, movetoworkspacesilent, 5
+bind = $mainMod Control&Shift, 6, movetoworkspacesilent, 6
+bind = $mainMod Control&Shift, 7, movetoworkspacesilent, 7
+bind = $mainMod Control&Shift, 8, movetoworkspacesilent, 8
+bind = $mainMod Control&Shift, 9, movetoworkspacesilent, 9
+bind = $mainMod Control&Shift, 0, movetoworkspacesilent, 10
 
 bind = $mainMod&Control, c, centerwindow
 # notifcation daemon
