hyprland: add more volume knob binds, this time for playerctl

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -480,9 +480,13 @@ bindel = $mainMod,XF86AudioMute, exec, busctl --user set-property rs.wl-gammarel
 bindel = $mainMod,XF86AudioLowerVolume, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n -100 
 bindel = $mainMod,XF86AudioRaiseVolume, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n +100 
 
+bindl = Control, XF86AudioMute, exec, playerctl play-pause
+bindl = Control, XF86AudioLowerVolume, exec, playerctl previous
+bindl = Control, XF86AudioRaiseVolume, exec, playerctl next
 
 bindel = Alt,XF86AudioRaiseVolume,workspace, e+1
 bindel = Alt,XF86AudioLowerVolume,workspace, e-1 
+
 
 ###############
 ### SUBMAPS ### 
