kitty: customise tab bar settings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -647,6 +647,7 @@ confirm_os_window_close 0
 #: Tab bar {{{
 
 # tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -662,6 +663,8 @@ confirm_os_window_close 0
 #: contents of the current tab.
 
 # tab_bar_style fade
+#tab_bar_style separator
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -718,6 +721,7 @@ confirm_os_window_close 0
 #: leading or trailing spaces surround the text with quotes.
 
 # tab_title_template "{title}"
+tab_title_template "{index} {title}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -736,6 +740,7 @@ confirm_os_window_close 0
 #: {fmt.bold}bold{fmt.nobold}normal{fmt.italic}italic{fmt.noitalic}.
 
 # active_tab_title_template none
+active_tab_title_template "*{index} {title}"
 
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
