--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -100,10 +100,23 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
+
 #exec-once = swaync
 exec-once = wl-clip-persist --clipboard both
 #exec-once = gammastep
+
+
 exec-once = wl-gammarelay-rs
+# autogamma is a tool to autoset wl-gammarelay to night and day temps, at predefined times at startup.
+# -nt: night temp
+# -dt: day temp
+# -mh: morning hour
+# -nh: night hour
+# -mm: morning min
+# -nm: night min
+exec-once = autogamma -nt 3300 -dt 6500 -mh 9 -mm 30 -nh 21 
+
+
 exec-once = hyprctl dispatch workspace 1 # this is to force my mouse onto my main display at startup
 
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
