kitty: add binds for opening new tab with current pwd, with and without vim telescope

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1192,6 +1192,8 @@ linux_display_server auto
 #: available here </actions>.
 
 # kitty_mod ctrl+shift
+map ctrl+shift+r launch --cwd=current --type=tab 
+map ctrl+shift+e launch --cwd=current --type=tab nvim "-c Telescope find_files"
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
