hyprland: enable hardware cursors

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -152,7 +152,9 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 #env = __GL_VRR_ALLOWED,0
 
 cursor {
-    no_hardware_cursors = false # not a hard requarement for nvidia any more but reduces stutters as of version v45.
+    #no_hardware_cursors = false # not a hard requarement for nvidia any more but reduces stutters as of version v45.
+    no_hardware_cursors = 0
+    use_cpu_buffer = true
 }
 
 
