hyprland: move grim slurp bind from mod+alt to mod+shift and add new mod+alt bind to list all screenshots via ripdrag

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -138,7 +138,8 @@ env = XDG_SESSION_DESKTOP,Hyprland
 # for the mean time only set explitly for gamescope
 
 # Atempt to set Grim save dir
-env = GRIM_DEFAULT_DIR,$HOME/screenshots
+$grimscreenshotdir = $HOME/screenshots
+env = GRIM_DEFAULT_DIR,$grimscreenshotdir
 
 
 ####################
@@ -459,7 +460,8 @@ bind = $mainMod&Control, p, exec, notify-send "$(hyprfreeze.py)"
 # Screenshot binds
 bind = $mainMod, c, exec, grim
 bind = $mainMod&Control, c, exec, grim -g "$(slurp -d)" - | wl-copy
-bind = $mainMod&Alt, c, exec,grim -g "$(slurp -d)"
+bind = $mainMod&Shift, c, exec,grim -g "$(slurp -d)"
+bind = $mainMod&Alt, c, exec, ripdragShots $grimscreenshotdir
 
 # Gaming script and reset bind
 bind = $mainMod&control,1, exec, ~/.config/hypr/gamemode.sh
