--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -229,6 +229,7 @@ font_size 11.0
 #: CURSOR_COLUMN will be replaced by the current cursor position.
 
 # scrollback_pager_history_size 0
+scrollback_pager_history_size 10
 
 #: Separate scrollback history size, used only for browsing the
 #: scrollback buffer (in MB). This separate buffer is not available
