hyprland: fix hjkl missmatch

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -363,9 +363,9 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, h, movefocus, l
-bind = $mainMod, j, movefocus, r
+bind = $mainMod, j, movefocus, d
 bind = $mainMod, k, movefocus, u
-bind = $mainMod, l, movefocus, d
+bind = $mainMod, l, movefocus, r 
 
 # Move windows with mainMod + arrow keys
 bind = $mainMod&Shift, left, movewindow, l
