hyprland:move grim bind to avoid bind conflict

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -459,7 +459,7 @@ bind = $mainMod&Control, p, exec, notify-send "$(hyprfreeze.py)"
 
 # Screenshot binds
 bind = $mainMod, c, exec, grim
-bind = $mainMod&Control, c, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = $mainMod&Control&Shift, c, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod&Shift, c, exec,grim -g "$(slurp -d)"
 bind = $mainMod&Alt, c, exec, ripdragShots $grimscreenshotdir
 
