hyprland: add binds for resizing active window and moving it

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -380,6 +380,18 @@ bind = $mainMod&Shift, j, movewindow,d
 bind = $mainMod&Shift, k, movewindow,u
 bind = $mainMod&Shift, l, movewindow,r
 
+binde = $mainMod&Shift&Control, h, resizeactive, 0 -10
+binde = $mainMod&Shift&Control, j, resizeactive, 0 10
+binde = $mainMod&Shift&Control, k, resizeactive, -10 0 
+binde = $mainMod&Shift&Control, l, resizeactive, 10 0
+
+binde = $mainMod&Shift&alt, h, moveactive, -10 0
+binde = $mainMod&Shift&alt, j, moveactive, 0 10
+binde = $mainMod&Shift&alt, k, moveactive, 0 -10
+binde = $mainMod&Shift&alt, l, moveactive, 10 0 
+
+
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
