make gnome-calc float

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -570,6 +570,8 @@ windowrulev2 = stayfocused, class:^(Godot)$, title:^(Create)
 windowrulev2 = renderunfocused, class:(Slay the Spire), title:(Slay the Spire) # fix slay the spire audio stutter while in background
 windowrulev2 = renderunfocused, class:(pokemon tcg live.exe) # fix slay the spire audio stutter while in background
 
+windowrulev2 = float, class:(org.gnome.Calculator)
+
 #############################
 ### SCRATCHPAD WORKSPACES ###
 #############################
