--- a/solaar/rules_raw.yaml
+++ b/solaar/rules_raw.yaml
@@ -1,17 +1,25 @@
 %YAML 1.3
 ---
 - Key: [Forward Button, pressed]
-- Execute: [ydotool, click, '0x44']
+- KeyPress:
+  - XF86_Forward
+  - depress
 ...
 ---
 - Key: [Forward Button, released]
-- Execute: [ydotool, click, '0x84']
+- KeyPress:
+  - XF86_Forward
+  - release
 ...
 ---
 - Key: [Back Button, released]
-- Execute: [ydotool, click, '0x83']
+- KeyPress:
+  - XF86_Back
+  - release
 ...
 ---
 - Key: [Back Button, pressed]
-- Execute: [ydotool, click, '0x43']
+- KeyPress:
+  - XF86_Back
+  - depress
 ...
