--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -10,7 +10,7 @@ listener {
 }
 listener {
     timeout = 30                                 # 30 secs 
-    on-timeout = sh -c 'pgrep -x "swaylock" && hyprctl dispatch dpms off'        # screen off when timeout has passed and swaylock open
+    on-timeout = sh -c 'pgrep -x "hyprlock" && hyprctl dispatch dpms off'        # screen off when timeout has passed and swaylock open
     #on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
 
