--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -535,7 +535,8 @@ submap = reset
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 # taken from here https://github.com/hyprwm/Hyprland/issues/7661#issuecomment-2335123700
-windowrulev2 = float, class:(team)$, title:^(?!Steam$).*$
+#windowrulev2 = float, class:(steam)$, title:^(?!Steam$).*$
+windowrulev2 = float, class:^(steam)$, title:(Steam .*) # changed regex for v0.45
 
 windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
