hyprland: fix godot regex

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -566,7 +566,7 @@ windowrulev2 = noborder, class:(Xdg-desktop-portal-gtk) # xwayland version of th
 windowrulev2 = noanim, class:(bemenu)
 windowrulev2 = noanim, class:(ueberzugpp).*$
 
-windowrulev2 = stayfocused, class:^(Godot)$, title:^(Create)
+windowrulev2 = stayfocused, class:^(Godot)$, title:^(Create).*
 
 windowrulev2 = renderunfocused, class:(Slay the Spire), title:(Slay the Spire) # fix slay the spire audio stutter while in background
 windowrulev2 = renderunfocused, class:(pokemon tcg live.exe) # fix slay the spire audio stutter while in background
