hyprland: add ydotoold to config for solaar mouse binds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -95,6 +95,7 @@ exec-once = ~/.config/gentoo_only/init
 
 
 exec-once = solaar --window=hide # start solaar to fix mouse to disable Horizontal Scrolling
+exec-once = ydotoold # start ydotoold for solaar to do for mouse rebinding
 exec-once = playerctld daemon # starts playerctl daemon to make playerctl priority actually work.
 exec-once = waybar
 exec-once = hyprpaper
