hyprland: add ncpamixer scratchpad

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -441,6 +441,7 @@ bind = $mainMod&Shift, n, exec, swaync-client -t -sw
 
 bind = $mainMod, x, togglespecialworkspace, termscratchpad
 bind = $mainMod, b, togglespecialworkspace, termscratchpad_bluetuith
+bind = $mainMod, v, togglespecialworkspace, ncpamixer 
 
 
 # Scroll through existing workspaces with mainMod + scroll
@@ -579,6 +580,7 @@ windowrulev2 = float, class:(org.gnome.Calculator)
 #############################
 workspace = special:termscratchpad, gapsin:0, gapsout:50,on-created-empty:[noblur]kitty -o background_opacity=0.4 # --class hyprScratchpadTerminal
 workspace = special:termscratchpad_bluetuith, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty -o background_opacity=0.4 -e bluetuith # --class hyprScratchpadTerminal
+workspace = special:ncpamixer, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty --class "ncpamixerpad" -o background_opacity=0.4 -e ncpamixer
 
 
 debug:disable_logs = false
