hyprland: disable autoreload due to bugs related to file reloading because of config being to big

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -281,6 +281,7 @@ misc {
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
     key_press_enables_dpms = true
     mouse_move_enables_dpms = true
+    disable_autoreload = true # config file is so big that this brakes lmao
 }
 
 
